# mark2pdf

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml
src/mark2pdf/: __init__.py  core.py
src/mark2pdf/backends/: __init__.py  base.py  playwright_backend.py  weasyprint_backend.py
src/mark2pdf/styles/: default.css
