[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mark2pdf"
version = "0.1.0"
description = "Markdown to PDF converter using Playwright (Windows) or WeasyPrint (Linux)"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Evgeny Pekerman", email = "geka.kud@gmail.com" }
]
keywords = ["markdown", "pdf", "converter", "playwright", "weasyprint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "markdown>=3.5",
]

[project.optional-dependencies]
windows = ["playwright>=1.40"]
linux = ["weasyprint>=60"]
all = ["playwright>=1.40", "weasyprint>=60"]

[project.urls]
Homepage = "https://github.com/gekakud/mark2pdf"
Repository = "https://github.com/gekakud/mark2pdf"

[tool.hatch.build.targets.wheel]
packages = ["src/mark2pdf"]

[tool.hatch.build.targets.sdist]
include = ["src/mark2pdf/**/*"]

[tool.hatch.build]
include = ["src/mark2pdf/**/*.css"]
